# astc_encoder

./: .gitignore  .iex.exs  Cargo.toml  README.md  mix.exs
bench/: test1.exs
lib/: astc_encoder.ex  native.ex  util.ex
native/astcenc/: .rustc_info.json  Cargo.toml  README.md
native/astcenc/native/astcenc/: .rustc_info.json
native/astcenc/src/: lib.rs
priv/: astcenc-avx2
test/: astc_encoder_test.exs
