[package]
name = "astcenc"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "astcenc"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
astcenc-sys = { path = "../astcenc-sys" }
rustler = "0.34.0"
image = "0.25.2"
bitflags = "2.6.0"
half = "2.4.1"

[dev-dependencies]
rand = "0.8.5"
