[package]
name = "astcenc"
version = "0.1.0"
authors = []
edition = "2021"

[lib]
name = "astcenc"
path = "src/lib.rs"
crate-type = ["cdylib"]

[dependencies]
astcenc-sys = {git = "https://github.com/boyzwj/astcenc-sys.git", branch = "master"}
rustler = "0.34.0"
image = "0.25.2"
bitflags = "2.6.0"
half = "2.4.1"
fast_image_resize = "4.2.1"

[dev-dependencies]
rand = "0.8.5"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
target-cpu = "native"
panic = 'abort'
strip = "debuginfo"